# filmtagger

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
docs/: AnalogExif.md
filmtagger/: __about__.py  cameras.toml  cli.py  films.toml
tests/: test_cli.py
